; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/cgi/webapps/extr_772.c_buildHeader.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/cgi/webapps/extr_772.c_buildHeader.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [393 x i8] c"GET %s/%s?configdir=%s HTTP/1.1\0D\0AAccept: text/xml,application/xml,application/xhtml+xml,text/html;q=0.9,text/plain;q=0.8,video/x-mng,image/png,image/jpeg,image/gif;q=0.2,text/css,*/*;q=0.1\0D\0AAccept-Language: en-us\0D\0AAccept-Encoding: deflate, gzip\0D\0AUser-Agent: Mozilla/4.0 (compatible; MSIE 6.0; Windows NT 5.1; SV1; FunWebProducts)\0D\0AHost: %s\0D\0AConnection: Keep-Alive\0D\0ACache-Control: no-cache\0D\0A\0D\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @buildHeader(i8* %0, i8* %1, i8* %2, i8* %3) #0 {
  %5 = alloca i8*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i8*, align 8
  %9 = alloca [5196 x i8], align 16
  store i8* %0, i8** %5, align 8
  store i8* %1, i8** %6, align 8
  store i8* %2, i8** %7, align 8
  store i8* %3, i8** %8, align 8
  %10 = getelementptr inbounds [5196 x i8], [5196 x i8]* %9, i64 0, i64 0
  %11 = load i8*, i8** %6, align 8
  %12 = load i8*, i8** %7, align 8
  %13 = load i8*, i8** %8, align 8
  %14 = call i8* @urlEncode(i8* %13)
  %15 = load i8*, i8** %5, align 8
  %16 = call i32 @sprintf(i8* %10, i8* getelementptr inbounds ([393 x i8], [393 x i8]* @.str, i64 0, i64 0), i8* %11, i8* %12, i8* %14, i8* %15)
  %17 = getelementptr inbounds [5196 x i8], [5196 x i8]* %9, i64 0, i64 0
  ret i8* %17
}

declare dso_local i32 @sprintf(i8*, i8*, i8*, i8*, i8*, i8*) #1

declare dso_local i8* @urlEncode(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
